--- a/app.json
+++ b/app.json
@@ -1,21 +1,38 @@
 {
-  "name": "nexty-whatsapp-bot",
-  "description": "Stylish WhatsApp Bot by NEXTY with menu + automatic voice",
+  "name": "WhatsApp Bot",
+  "description": "A WhatsApp bot with menu, ping, JID and message forwarding features",
   "repository": "https://github.com/nextyall/NEXTY1",
-  "stack": "heroku-22",
+  "logo": "https://telegra.ph/file/64c4e67f38e76dcabead8.jpg",
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "nodejs",
+    "heroku"
+  ],
   "buildpacks": [
     {
       "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/jontewks/puppeteer-heroku-buildpack"
     }
   ],
   "env": {
-    "SESSION_DATA": {
-      "description": "Your WhatsApp session JSON. Generate it from FLEX AI session pair.",
+    "SESSION_ID": {
+      "description": "Get Session ID from: https://flex-pairing2-4ea9250ad369.herokuapp.com/pair",
+      "value": "REPLACE_WITH_YOUR_SESSION_ID",
       "required": true
     },
-    "PORT": {
-      "description": "Port for the app",
-      "value": "43440"
+    "NODE_ENV": {
+      "description": "Environment type",
+      "value": "production",
+      "required": true
+    }
+  },
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "eco"
     }
   }
 }
