--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "whatsapp-bot",
+  "name": "whatsapp-bot-2x",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with features",
+  "description": "WhatsApp Bot 2X Plan - public deploy",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.18.4",
