--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "whatsapp-bot",
+  "name": "whatsapp-bot-2x",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with features",
+  "description": "WhatsApp Bot 2X Plan - team deploy ready",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true"
+    "start": "node index.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.18.4",
     "qrcode-terminal": "^0.12.0",
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
+    "puppeteer-core": "^21.3.8"
   },
   "engines": {
     "node": "20.x",
