--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatsapp-bot-2x",
+  "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "WhatsApp Bot 2X Plan - team deploy ready",
+  "description": "WhatsApp Bot ready for team deploy",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,11 +9,10 @@
   "dependencies": {
     "whatsapp-web.js": "^1.18.4",
     "qrcode-terminal": "^0.12.0",
-    "express": "^4.18.2",
-    "puppeteer-core": "^21.3.8"
+    "express": "^4.18.2"
   },
   "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+    "node": "18.x",
+    "npm": "8.x"
   }
 }
